--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 0.7.0
+======================
+* Add smartcard channel
+
+Major changes in 0.6.4 (not yet released):
+==========================================
+* Make controller client protocol menu text UTF8 rather then 16 bit unicode
+
 Major changes in 0.6.3:
 =======================
 * Add support for copy and paste to the agent protocol
