--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,14 @@
+Major changes in 0.7.1
+======================
+* Add some enums for the xorg qxl driver
+* Some other small fixes
+
 Major changes in 0.7.0
 ======================
 * Add smartcard channel
 
-Major changes in 0.6.4 (not yet released):
-==========================================
+Major changes in 0.6.4
+======================
 * Make controller client protocol menu text UTF8 rather then 16 bit unicode
 
 Major changes in 0.6.3:
