--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 0.9.0
+======================
+* Add support for generic spicevmc chardev passthrough messages
+* Add USB redirection channel
+
 Major changes in 0.8.1
 ======================
 * Add support for volume change
