--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 0.8.2
+======================
+* Add support for semi-seamless migration
+
 Major changes in 0.8.1
 ======================
 * Add support for volume change
