--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 0.10.0
+=======================
+* no changes, released to match version with spice
+
 Major changes in 0.9.1 (same as 0.8.2 in 0.8 branch)
 ======================
 * Add support for semi-seamless migration
