--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 0.12.1
+=======================
+* Support seamless migration.
+* New QXLComposite message for better X support.
+* Support arbitrary scancode message INPUTS_KEY_SCANCODE.
+
 Major changes in 0.12.0
 =======================
 * Add support for arbitrary resolution on Windows QXL with
