--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 0.12.4
+=======================
+* Add agent file copy support.
+* Add agent sparse monitors capability.
+* Add controller proxy message.
+
 Major changes in 0.12.3
 =======================
 * Add a generic "port" channel
