--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 0.12.7
+=======================
+* add support for Webdav channel
+* add support for the Opus codec
+
 Major changes in 0.12.6
 =======================
 * add adaptive video streaming support:
